--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -4,4 +4,11 @@
 }
 
 <h2>Index</h2>
+@using (Html.BeginForm("Upload", "Market", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <input type="file" name="file" />
+    <input type="submit" name="Submit" id="Submit" value="Upload" />
+}
+
+
 
