--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -11,10 +11,10 @@
 <form action="/Home/Register" method="post">
     <h2>Register</h2>
     <label for="username">Username</label>
-    <input type="text" id="Name" name="Name" placeholder="Username" required autofocus /></br>
+    <input type="text" id="Name" name="Name" placeholder="Username" required autofocus /><br>
     <label for="username">Password</label>
     <input type="text" id="password" name="password" placeholder="Password" required autofocus />
-    <input type="text" id="password2" name="password2" placeholder="password again" required autofocus /></br>
+    <input type="text" id="password2" name="password2" placeholder="password again" required autofocus /><br>
     <button type="submit"> Register </button> or
     <a href="/Home/login">Login</a>
 </form>
