--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -1,14 +1,23 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
-@using (Html.BeginForm("Upload", "Market", FormMethod.Post, new { enctype = "multipart/form-data" }))
+﻿<table class="table" border="1">
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Size</th>
+        <th>Sugar</th>
+        <th>Image</th>
+    </tr>
+@foreach (var item in Model)
 {
-    <input type="file" name="file" />
-    <input type="submit" name="Submit" id="Submit" value="Upload" />
+    //<img src= "@Url.Content(item.Product.Image)" alt="Image" />
+    var base64 = Convert.ToBase64String(item.Image);
+    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+<tr>
+    <td>@item.Id</td>
+    <td>@item.Name</td>
+    <td>@item.Size</td>
+    <td>@item.Sugar</td>
+    <td><img src="@imgSrc" width="200" height="200" /></td>
+    <td><a href="@Url.Content("~/Market/Item/?id=" + item.Id)">click here</a></td>
+</tr>
 }
-
-
-
+</table>
