Listing items in Market,need include user id button

--- a/Views/Market/Profile.cshtml
+++ b/Views/Market/Profile.cshtml
@@ -28,10 +28,13 @@
                                 {
                                     <h2>@Model.Name <i class="fa fa-circle green-font online-icon" style="color:red">(offline)</i></h2>
                                 }
-
-                                <div class="contact">
-                                    <a href="#" class="btn btn-block btn-danger"><i class="fa fa-envelope-o"></i> Send Message</a>
-                                </div>
+                                @if (Model.OwnProfile == false)
+                                {
+                                    <div class="contact">
+                                        <a href="#" class="btn btn-block btn-danger"><i class="fa fa-envelope-o"></i> Send Message</a>
+                                    </div>
+                                }
+                                
                             </div>
                         </div>
                         <div class="col-md-9">
@@ -60,11 +63,11 @@
                                             }
 
                                         }
-<p class="data-row">
-                                                    <span class="data-name">Date Joined</span>
-                                                    <span class="data-value">Feb 22, 2012</span>
-                                                </p>
-</div>
+                                            <p class="data-row">
+                                            <span class="data-name">Date Joined</span>
+                                            <span class="data-value">@Model.DataJoined</span>
+                                        </p>
+                                    </div>
                                 <div class="about">
                                     <h3><i class="fa fa-square"></i> About Me</h3>
                                     <p>Dramatically facilitate proactive solutions whereas professional intellectual capital. Holisticly utilize competitive e-markets through intermandated meta-services. Objectively.</p>
