--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -5,19 +5,19 @@
         <th>Size</th>
         <th>Sugar</th>
         <th>Image</th>
-    </tr>
-@foreach (var item in Model)
-{
-    //<img src= "@Url.Content(item.Product.Image)" alt="Image" />
-    var base64 = Convert.ToBase64String(item.Image);
-    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-<tr>
-    <td>@item.Id</td>
-    <td>@item.Name</td>
-    <td>@item.Size</td>
-    <td>@item.Sugar</td>
-    <td><img src="@imgSrc" width="200" height="200" /></td>
-    <td><a href="@Url.Content("~/Market/Item/?id=" + item.Id)">click here</a></td>
-</tr>
-}
+        <th>Profile</th>
+    @foreach (var item in Model)
+        {
+            //<img src= "@Url.Content(item.Product.Image)" alt="Image" />
+            var base64 = Convert.ToBase64String(item.Image);
+            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+        <tr>
+            <td>@item.Id</td>
+            <td>@item.Name</td>
+            <td>@item.Size</td>
+            <td>@item.Sugar</td>
+            <td><img src="@imgSrc" width="200" height="200" /></td>
+            <td><a href="@Url.Content("~/Market/Item/?id=" + item.Id)">click here</a></td>
+        </tr>
+        }
 </table>
