--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿<table class="table" border="1">
     <tr>
-        <th>ID</th>
         <th>Name</th>
         <th>Size</th>
         <th>Sugar</th>
+        <th>Coffein</th>
         <th>Image</th>
         <th>Profile</th>
     @foreach (var item in Model)
@@ -12,12 +12,12 @@
             var base64 = Convert.ToBase64String(item.Image);
             var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
         <tr>
-            <td>@item.Id</td>
             <td>@item.Name</td>
             <td>@item.Size</td>
             <td>@item.Sugar</td>
+            <td>@item.Coffein</td>
             <td><img src="@imgSrc" width="200" height="200" /></td>
-            <td><a href="@Url.Content("~/Market/Item/?id=" + item.Id)">click here</a></td>
+            <td><a href="@Url.Content("~/Market/Profile/?id=" + item.UserID)">click here</a></td>
         </tr>
         }
 </table>
