--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -1,4 +1,9 @@
-﻿<table class="table" border="1">
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
+}
+
+<table class="table" border="1">
     <tr>
         <th>Name</th>
         <th>Size</th>
@@ -6,7 +11,7 @@
         <th>Coffein</th>
         <th>Image</th>
         <th>Profile</th>
-    @foreach (var item in Model)
+        @foreach (var item in Model)
         {
             //<img src= "@Url.Content(item.Product.Image)" alt="Image" />
             var base64 = Convert.ToBase64String(item.Image);
@@ -19,5 +24,5 @@
             <td><img src="@imgSrc" width="200" height="200" /></td>
             <td><a href="@Url.Content("~/Market/Profile/?id=" + item.UserID)">click here</a></td>
         </tr>
-        }
-</table>
+    }
+    </table>
