--- a/Views/Market/MyItems.cshtml
+++ b/Views/Market/MyItems.cshtml
@@ -1,4 +1,9 @@
-﻿<table border="1"
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
+}
+
+<table border="1"
     <tr>
         <th>ID</th>
         <th>Name</th>
