--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,12 +3,15 @@
 
 }
 
-<form action="/Home/Login" method="post">
-    <h2>Login</h2>
-    <label for="username">Username</label>
-    <input type="text" id="Name" name="Name" placeholder="Username" required autofocus /><br />
-    <label for="username">Password</label>
-    <input type="text" id="Password" name="Password" placeholder="Password" required autofocus /><br />
-    <button type="submit"> Login </button> or
-    <a href="/Home/Register">Register</a>
+<form style="width:500px" action="/Home/Login" method="post">
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Username</label>
+        <input class="form-control" type="text" id="Name" name="Name" placeholder="Username" required autofocus />
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <label for="inputPassword5" class="form-label">Password</label>
+    <input class="form-control" type="text" id="password" name="password" placeholder="Password" required autofocus />
+    <div id="passwordHelpBlock" class="form-text">
+
+    <button type="submit" class="btn btn-primary">Register</button>
 </form>
