--- a/Views/Market/Add.cshtml
+++ b/Views/Market/Add.cshtml
@@ -10,27 +10,31 @@
 
 </body>
 </html>
-@using (Html.BeginForm("add", "Market", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    <label> Choose your Energy drink from our database</label>
-    <input class="form-control" type="text" name="Brand" placeholder="Brand" required autofocus />
-    <br>
-    <label>Name of Energy</label>
-    <input class="form-control" type="text" name="Name" placeholder="Name" required autofocus />
-    <br>
-    <label>Size of the bottle</label>
-    <input class="form-control" type="text" name="Size" placeholder="Size" required autofocus />
-    <br>
-    <label>Does it contain coffein? How much?</label>
-    <input class="form-control" type="text" name="Coffein" placeholder="Coffein" required autofocus />
-    <br>
-    <label>Does it contain Sugar? How much?</label>
-    <input class="form-control" type="text" name="Sugar" placeholder="Sugar" required autofocus />
-    <br>
-    <legend>Upload your photo</legend>
-    <label for="Image">Image</label>
+<div style="width:200px">
 
-    <input type="file" name="file" />
-    <br />
-    <input class="btn btn-primary" type="submit" name="Submit" id="Submit" value="Upload" />
-}
+
+    @using (Html.BeginForm("add", "Market", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        <label> Choose your Energy drink from our database</label>
+        <input class="form-control" type="text" name="Brand" placeholder="Brand" required autofocus />
+        <br>
+        <label>Name of Energy</label>
+        <input class="form-control" type="text" name="Name" placeholder="Name" required autofocus />
+        <br>
+        <label>Size of the bottle</label>
+        <input class="form-control" type="text" name="Size" placeholder="Size" required autofocus />
+        <br>
+        <label>Does it contain coffein? How much?</label>
+        <input class="form-control" type="text" name="Coffein" placeholder="Coffein" required autofocus />
+        <br>
+        <label>Does it contain Sugar? How much?</label>
+        <input class="form-control" type="text" name="Sugar" placeholder="Sugar" required autofocus />
+        <br>
+        <legend>Upload your photo</legend>
+        <label for="Image">Image</label>
+
+        <input type="file" name="file" />
+        <br />
+        <input class="btn btn-primary" type="submit" name="Submit" id="Submit" value="Upload" />
+    }
+</div>
