--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -3,18 +3,50 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
-@if (@ViewData["Exist"] != null) {
+@if (@ViewData["Exist"] != null)
+{
     <h3>@ViewData["Exist"] nevű felhasználó már foglalt</h3>
 }
 
+@*<div>
+        <form action="/Home/Register" method="post">
+            <h2>Register</h2>
+            <div>
+                <label for="username">Username</label>
+                <input type="text" id="Name" name="Name" placeholder="Username" required autofocus /><br>
+                <label for="username">Password</label>
+                <input type="text" id="password" name="password" placeholder="Password" required autofocus />
+                <input type="text" id="password2" name="password2" placeholder="password again" required autofocus /><br>
+                <button type="submit"> Register </button> or
+                <a href="/Home/login">Login</a>
+            </div>
 
-<form action="/Home/Register" method="post">
-    <h2>Register</h2>
-    <label for="username">Username</label>
-    <input type="text" id="Name" name="Name" placeholder="Username" required autofocus /><br>
-    <label for="username">Password</label>
-    <input type="text" id="password" name="password" placeholder="Password" required autofocus />
-    <input type="text" id="password2" name="password2" placeholder="password again" required autofocus /><br>
-    <button type="submit"> Register </button> or
-    <a href="/Home/login">Login</a>
+        </form>
+    </div>*@
+<form style="width:500px" action="/Home/Register" method="post">
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Username</label>
+        <input class="form-control" type="text" id="Name" name="Name" placeholder="Username" required autofocus />
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <label for="inputPassword5" class="form-label">Password</label>
+    <input class="form-control" type="text" id="password" name="password" placeholder="Password" required autofocus />
+    <div id="passwordHelpBlock" class="form-text">
+    </div>
+    <label for="inputPassword5" class="form-label">Password Again</label>
+    <input class="form-control" type="text" id="password2" name="password2" placeholder="password again" required autofocus /><br>
+    <div id="passwordHelpBlock" class="form-text">
+    </div>
+    <div class="row">
+        <div class="col d-md-flex">
+            <button type="submit" class="btn btn-primary">Register</button>
+            <p> Or Login</p>
+
 </form>
+            <a class="btn btn-dark btn-primary btn-lg btn-block" href="/Home/login">Login</a>
+        </div>
+    </div>
+
+
+
+
