--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -2,27 +2,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
+<div>
 
-<table class="table" border="1">
-    <tr>
-        <th>Name</th>
-        <th>Size</th>
-        <th>Sugar</th>
-        <th>Coffein</th>
-        <th>Image</th>
-        <th>Profile</th>
-        @foreach (var item in Model)
-        {
-            //<img src= "@Url.Content(item.Product.Image)" alt="Image" />
-            var base64 = Convert.ToBase64String(item.Image);
-            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+
+    <table class="table" border="1">
         <tr>
-            <td>@item.Name</td>
-            <td>@item.Size</td>
-            <td>@item.Sugar</td>
-            <td>@item.Coffein</td>
-            <td><img src="@imgSrc" width="200" height="200" /></td>
-            <td><a href="@Url.Content("~/Market/Profile/?id=" + item.UserID)">click here</a></td>
-        </tr>
-    }
-    </table>
+            <th>Brand</th>
+            <th>Name</th>
+            <th>Size</th>
+            <th>Sugar</th>
+            <th>Coffein</th>
+            <th>Image</th>
+            <th>Profile</th>
+            @foreach (var item in Model)
+            {
+                //<img src= "@Url.Content(item.Product.Image)" alt="Image" />
+                var base64 = Convert.ToBase64String(item.Image);
+                var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+            <tr>
+                <td>@item.Brand.Name</td>
+                <td>@item.Name</td>
+                <td>@item.Size</td>
+                <td>@item.Sugar</td>
+                <td>@item.Coffein</td>
+                <td><img src="@imgSrc" width="200" height="200" /></td>
+                <td><a href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">click here</a></td>
+            </tr>
+        }
+        </table>
+    </div>
