--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -2,16 +2,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
+<div class="d-flex justify-content-center">
+    <h1>Login form</h1>
+</div>
+<div class="d-flex justify-content-center">
 
-<form style="width:500px" action="/Home/Login" method="post">
-    <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Username</label>
-        <input class="form-control" type="text" id="Name" name="Name" placeholder="Username" required autofocus />
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <form style="width:500px" action="/Home/Login" method="post">
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Username</label>
+            <input class="form-control" type="text" id="Name" name="Name" placeholder="Username" required autofocus />
+            <div id="emailHelp" class="form-text"></div>
+
+
+            <label for="inputPassword5" class="form-label">Password</label>
+            <input class="form-control" type="text" id="password" name="password" placeholder="Password" required autofocus />
+        </div>
+</div>
+<div class="d-flex justify-content-center">
+    <div class="row">
+        <div class="col d-md-flex">
+            <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+            <h3> </h3>
+            <a class="btn btn-dark btn-primary btn-lg btn-block" href="/Home/register">register</a>
+        </div>
     </div>
-    <label for="inputPassword5" class="form-label">Password</label>
-    <input class="form-control" type="text" id="password" name="password" placeholder="Password" required autofocus />
-    <div id="passwordHelpBlock" class="form-text">
-
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
+</div>
