--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -23,29 +23,38 @@
 
         </form>
     </div>*@
-<form style="width:500px" action="/Home/Register" method="post">
-    <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Username</label>
-        <input class="form-control" type="text" id="Name" name="Name" placeholder="Username" required autofocus />
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    <label for="inputPassword5" class="form-label">Password</label>
-    <input class="form-control" type="text" id="password" name="password" placeholder="Password" required autofocus />
-    <div id="passwordHelpBlock" class="form-text">
-    </div>
-    <label for="inputPassword5" class="form-label">Password Again</label>
-    <input class="form-control" type="text" id="password2" name="password2" placeholder="password again" required autofocus /><br>
-    <div id="passwordHelpBlock" class="form-text">
-    </div>
+<div class="d-flex justify-content-center">
+    <h1>Register form </h1>
+</div>
+<div class="d-flex justify-content-center">
+    <form style="width:500px" action="/Home/Register" method="post">
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Username</label>
+            <input class="form-control" type="text" id="Name" name="Name" placeholder="Username" required autofocus />
+            <div id="emailHelp" class="form-text"></div>
+        </div>
+        <label for="inputPassword5" class="form-label">Password</label>
+        <input class="form-control" type="text" id="password" name="password" placeholder="Password" required autofocus />
+        <div id="passwordHelpBlock" class="form-text">
+        </div>
+        <label for="inputPassword5" class="form-label">Password Again</label>
+        <input class="form-control" type="text" id="password2" name="password2" placeholder="password again" required autofocus /><br>
+        <div id="passwordHelpBlock" class="form-text">
+        </div>
+</div>
+
+<div class="d-flex justify-content-center">
+
     <div class="row">
         <div class="col d-md-flex">
             <button type="submit" class="btn btn-primary">Register</button>
-            <p> Or Login</p>
+            <h3> </h3>
 
-</form>
+            </form>
             <a class="btn btn-dark btn-primary btn-lg btn-block" href="/Home/login">Login</a>
         </div>
     </div>
+</div>
 
 
 
