--- a/Views/Market/Test.cshtml
+++ b/Views/Market/Test.cshtml
@@ -1,36 +1,53 @@
-﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+﻿@section Scripts
+{
+    <script src="@Url.Content("~/Scripts/ownscripts.js")"></script>
+    <script src="@Styles.Render("~/Content/owncss.css")"></script>
+}
+<div class="d-flex justify-content-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <div class="card-image"> <img src="https://images.pexels.com/photos/2746187/pexels-photo-2746187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">SomeOne Famous</h4>
+                        <h5>Creative Desinger</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="#"> <span class="fab fa-facebook"></span> </a> </li>
+                            <li style="--i:2"> <a href="#"> <span class="fab fa-twitter"></span> </a> </li>
+                            <li style="--i:3"> <a href="#"> <span class="fab fa-instagram"></span> </a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <div class="card-image"> <img src="https://images.pexels.com/photos/381843/pexels-photo-381843.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">SomeOne Famous</h4>
+                        <h5>Creative Desinger</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="#"> <span class="fab fa-facebook"></span> </a> </li>
+                            <li style="--i:2"> <a href="#"> <span class="fab fa-twitter"></span> </a> </li>
+                            <li style="--i:3"> <a href="#"> <span class="fab fa-instagram"></span> </a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <div class="card-image"> <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">SomeOne Famous</h4>
+                        <h5>Creative Desinger</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="#"> <span class="fab fa-facebook"></span> </a> </li>
+                            <li style="--i:2"> <a href="#"> <span class="fab fa-twitter"></span> </a> </li>
+                            <li style="--i:3"> <a href="#"> <span class="fab fa-instagram"></span> </a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</nav>
+</div>
