--- a/Views/Market/Add.cshtml
+++ b/Views/Market/Add.cshtml
@@ -1,40 +1,45 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title>Uploader</title>
-</head>
-<body>
-    <form action="add" method="post" enctype="multipart/form-data">
-    </form>
-    <h1>Uploaded Image</h1>
+﻿<div class="d-flex justify-content-center">
+    <div>
+        <h2>Upload your product</h2>
+    </div>
+</div>
+<div class="d-flex justify-content-center" style="">
+        @using (Html.BeginForm("add", "Market", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            <div class="mb-3">
+                <label> Choose your Energy drink from our database</label>
+                <input class="form-control" type="text" name="Brand" placeholder="Brand" required autofocus />
+                <br>
+            </div>
+            <div class="mb-3">
+                <label>Name of Energy</label>
+                <input class="form-control" type="text" name="Name" placeholder="Name" required autofocus />
+                <br>
+            </div>
+            <div class="mb-3">
+                <label>Size of the bottle</label>
+                <input class="form-control" type="text" name="Size" placeholder="Size" required autofocus />
+                <br>
+            </div>
+            <div class="mb-3">
+                <label>Does it contain coffein? How much?</label>
+                <input class="form-control" type="text" name="Coffein" placeholder="Coffein" required autofocus />
+                <br>
+            </div>
+            <div class="mb-3">
+                <label>Does it contain Sugar? How much?</label>
+                <input class="form-control" type="text" name="Sugar" placeholder="Sugar" required autofocus />
+                <br>
+            </div>
+            <div class="mb-3">
+                <label>Upload your photo</label>
+                <label for="Image">Image</label>
 
-</body>
-</html>
-<div style="width:200px">
+                <input class="form-control" type="file" name="file" />
+            </div>
+            <div class="mb-3">
+                <input class="btn btn-primary" type="submit" name="Submit" id="Submit" value="Upload" />
+            </div>
 
-
-    @using (Html.BeginForm("add", "Market", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        <label> Choose your Energy drink from our database</label>
-        <input class="form-control" type="text" name="Brand" placeholder="Brand" required autofocus />
-        <br>
-        <label>Name of Energy</label>
-        <input class="form-control" type="text" name="Name" placeholder="Name" required autofocus />
-        <br>
-        <label>Size of the bottle</label>
-        <input class="form-control" type="text" name="Size" placeholder="Size" required autofocus />
-        <br>
-        <label>Does it contain coffein? How much?</label>
-        <input class="form-control" type="text" name="Coffein" placeholder="Coffein" required autofocus />
-        <br>
-        <label>Does it contain Sugar? How much?</label>
-        <input class="form-control" type="text" name="Sugar" placeholder="Sugar" required autofocus />
-        <br>
-        <legend>Upload your photo</legend>
-        <label for="Image">Image</label>
-
-        <input type="file" name="file" />
-        <br />
-        <input class="btn btn-primary" type="submit" name="Submit" id="Submit" value="Upload" />
-    }
+         }
 </div>
