--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -8,15 +8,12 @@
     <div class="row mt-2 g-4">
         @foreach (var item in Model)
         {
-            //var base64 = Convert.ToBase64String(item.Image);
-            //var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-
             <div class="col-md-3">
                 <div class="card p-1">
                     <div class="d-flex justify-content-between align-items-center p-2">
                         <div class="flex-column lh-1 imagename"> <span>@item.Brand.Name</span> <span>@item.Name</span> </div>
-                        @*<div> <img src="@imgSrc" height="100" width="100" /> </div>*@
-                        <a href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">click here</a>
+                        <div> <img src="@item.Image" height="100" width="100" /> </div>
+                        @*<a class="link-primary" href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">click here</a>*@
                     </div>
                 </div>
             </div>
