--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,40 +8,14 @@
     @Styles.Render("~/Content/owncss.css")
     @Styles.Render("~/Content/test.css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     @{
         var pageName = ViewContext.RouteData.Values["controller"].ToString();
     }
 
-    <script src="@Styles.Render("~/Content/owncss.css")"></script>
 </head>
 <body>
-
-    @*<div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("EnergyTrade", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        @if (!string.IsNullOrEmpty((string)Session["logged_in"]))
-                        {
-                            <li>@Html.ActionLink("Add", "Add", "Market")</li>
-                            <li>@Html.ActionLink("MyItems", "MyItems", "Market")</li>
-                            <li>@Html.ActionLink("Profile", "Profile", "Market")</li>
-                            <li>@Html.ActionLink("Logout", "Logout", "Market")</li>
-                        }
-                    </ul>
-                </div>
-            </div>
-        </div>*@
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:burlywood;">
         <div class="container-fluid">
             <a class="navbar-brand" href="/home/Index">EnegyTrade</a>
