--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,11 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <script type="text/javascript" src="Scripts/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
+
+
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/owncss.css")
     @Styles.Render("~/Content/test.css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
 
     @{
         var pageName = ViewContext.RouteData.Values["controller"].ToString();
@@ -61,15 +64,9 @@
                         </div>
                     </div>
                 </form>
-
-
             }
-
         </div>
     </nav>
-
-
-
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -77,11 +74,8 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @*@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")
     @Scripts.Render("~/Scripts/ownscripts.js")
-    @Scripts.Render("~/Scripts/bootstrap.min.js")*@
+    @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 </body>
 </html>
