--- a/Views/Market/Add.cshtml
+++ b/Views/Market/Add.cshtml
@@ -38,7 +38,7 @@
             <label>Upload your photo</label>
             <label for="Image">Image</label>
 
-            <input class="form-control" type="file" name="file" />
+            <input class="form-control" type="file" name="ImageFile" />
         </div>
         <div class="mb-3">
             <input class="btn btn-primary" type="submit" name="Submit" id="Submit" value="Upload" />
